Added comments and cleaned up warnings and unused code